{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 1718,
  "lineage": "1e29854e-c879-ffdf-34f0-f1477556c903",
  "resources": [
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:route-table/rtb-0e91af8f11a0bde41",
            "id": "rtb-0e91af8f11a0bde41",
            "owner_id": "767397812416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2be86dee659abd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-custom-Vpc-Public-RT"
            },
            "tags_all": {
              "Name": "My-custom-Vpc-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bbd6e9364f72ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd3e01a12c1b2160",
            "route_table_id": "rtb-0e91af8f11a0bde41",
            "subnet_id": "subnet-00de98158ff5ed129"
          },
          "dependencies": [
            "module.Route_Tables.aws_route_table.Public_RT",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-Webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public_Web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027d95b1c717e8c5d",
            "arn": "arn:aws:ec2:eu-west-2:767397812416:instance/i-0981946955ca469ec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0981946955ca469ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "karthik",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c109595411441335",
            "private_dns": "ip-192-168-1-229.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.229",
            "public_ip": "18.169.184.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d19a0dac4788a51c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00de98158ff5ed129",
            "tags": {
              "Name": "jenkins",
              "name": "My-Public-Webserver-1"
            },
            "tags_all": {
              "Name": "jenkins",
              "name": "My-Public-Webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0309c23e252a60a52"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.Web_server_SG",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_server_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:security-group/sg-079d8954193a17629",
            "description": "Security Group for Private Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079d8954193a17629",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Private-webserver-SG-1",
            "name_prefix": "",
            "owner_id": "767397812416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bbd6e9364f72ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web_server_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:security-group/sg-0309c23e252a60a52",
            "description": "Security Group for EC2 Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0309c23e252a60a52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "217.8.17.66/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2-webserver-SG-1",
            "name_prefix": "",
            "owner_id": "767397812416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bbd6e9364f72ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:internet-gateway/igw-0f2be86dee659abd5",
            "id": "igw-0f2be86dee659abd5",
            "owner_id": "767397812416",
            "tags": {
              "Name": "My-custom-Vpc-IGW"
            },
            "tags_all": {
              "Name": "My-custom-Vpc-IGW"
            },
            "vpc_id": "vpc-01bbd6e9364f72ce1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:subnet/subnet-00de98158ff5ed129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00de98158ff5ed129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397812416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-custom-Vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "My-custom-Vpc-public-subnet-1"
            },
            "vpc_id": "vpc-01bbd6e9364f72ce1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397812416:vpc/vpc-01bbd6e9364f72ce1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07fd38b5191c671e8",
            "default_route_table_id": "rtb-0e8dee0f567ba56f9",
            "default_security_group_id": "sg-0fb0450a28f71ec92",
            "dhcp_options_id": "dopt-07180d8b8acf76dd1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bbd6e9364f72ce1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8dee0f567ba56f9",
            "owner_id": "767397812416",
            "tags": {
              "name": "My-custom-VPC"
            },
            "tags_all": {
              "name": "My-custom-VPC"
            }
          }
        }
      ]
    }
  ]
}